--- a/requirements.txt
+++ b/requirements.txt
@@ -1,35 +1,18 @@
-# Core dependencies
+# 基础依赖
 websockets==11.0.3
 kafka-python==2.0.2
 python-dateutil==2.8.2
 python-json-logger==2.0.7
+requests==2.31.0
 
-# Data Analysis
-pandas==2.0.3
-numpy==1.24.3
-pyarrow==14.0.1  # For Parquet support
+# 数据处理依赖 - 使用兼容Python 3.12的版本
+numpy>=1.26.0
+pandas>=2.1.0
+scipy>=1.11.0
 
-# Web Framework
-fastapi==0.115.6
-uvicorn==0.32.1
-pydantic==2.10.3
-websocket-client==1.6.1
+# 可视化依赖
+streamlit>=1.28.0
+plotly>=5.17.0
 
-# Visualization
-streamlit==1.29.0
-plotly==5.18.0
-
-
-#-----
-scipy==1.11.4
-
-# Discord Bot
-discord.py==2.5.2
-
-
-python-dotenv==1.1.1
-
-# Airflow  DAG 
-kafka-python==2.0.2
-pandas==2.0.3
-python-dateutil==2.8.2
+# 其他依赖
+discord.py>=2.3.0
